force-app/main/default/objects/FOB_Additional_Contract__c/FOB_Additional_Contract__c.object-meta.xml
<CustomObject>
    <label>FOB Additional Contract</label>
    <nameField>
        <displayFormat>FAC-{0000000}</displayFormat>
        <label>FOB Additional Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FOB Additional Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>