force-app/main/default/objects/FOB_Additional_Contract__c/fields/Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount__c</fullName>
    <formula>IF( ISPICKVAL( Status__c , &apos;Forward Contract Execute&apos;) , Forward_FOB_Contract__r.Total_Contract_Amount__c -  Warranty_Claim_Other_Payment_Amount__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>