force-app/main/default/objects/FOB_Additional_Contract__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <formula>TEXT(Forward_FOB_Contract__r.Bank__c )</formula>
    <label>Bank</label>
    <type>Text</type>
</CustomField>