force-app/main/default/objects/FOB_Additional_Contract__c/fields/Bank_Contract_No_Sell_Execute__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contract_No_Sell_Execute__c</fullName>
    <label>Bank Contract No (Sell/Execute)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>