force-app/main/default/objects/FOB_Additional_Contract__c/fields/Bank_Contract_No_Spot_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contract_No_Spot_Rate__c</fullName>
    <label>Bank Contract No (Spot Rate)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>