force-app/main/default/objects/FOB_Additional_Contract__c/fields/Bank_Spot_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bank_Spot_Rate__c</fullName>
    <label>Bank (Spot Rate)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TMS_Banks</valueSetName>
    </valueSet>
</CustomField>