force-app/main/default/objects/FOB_Additional_Contract__c/fields/Contract_Amount_Spot_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amount_Spot_Rate__c</fullName>
    <label>Contract Amount (Spot Rate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>