force-app/main/default/objects/FOB_Additional_Contract__c/fields/Contracted_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Rate__c</fullName>
    <formula>Spot_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Same as Spot Rate</inlineHelpText>
    <label>Contracted Rate</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>