force-app/main/default/objects/FOB_Additional_Contract__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <formula>TEXT(Forward_FOB_Contract__r.Currency_Code__c )</formula>
    <label>Currency Code</label>
    <type>Text</type>
</CustomField>