force-app/main/default/objects/FOB_Additional_Contract__c/fields/Currency_Code_Spot_Rate__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code_Spot_Rate__c</fullName>
    <label>Currency Code (Spot Rate)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency_Code</valueSetName>
    </valueSet>
</CustomField>