force-app/main/default/objects/FOB_Additional_Contract__c/fields/Currency_Description_Spot_Rate__c.field-meta.xml
<CustomField>
    <fullName>Currency_Description_Spot_Rate__c</fullName>
    <label>Currency Description (Spot Rate)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>