force-app/main/default/objects/FOB_Additional_Contract__c/fields/Execute_Contract_Populated__c.field-meta.xml
<CustomField>
    <fullName>Execute_Contract_Populated__c</fullName>
    <formula>IF( OR( ISBLANK(Bank_Contract_No_Sell_Execute__c) ,ISBLANK(Transaction_Date_Sell_Execute__c),
ISBLANK(Effective_Date_Sell_Execute__c) , ISNULL(Spot_Rate_Sell_Execute__c) ,ISNULL(Total_Execution_Amount__c), (Total_Execution_Amount__c = 0) , ISNULL(Total_Cover_Amount_Contract_Rate__c), (Total_Cover_Amount_Contract_Rate__c = 0) ), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execute Contract Populated</label>
    <type>Checkbox</type>
</CustomField>