force-app/main/default/objects/FOB_Additional_Contract__c/fields/Forward_Contract_Execute_Approved__c.field-meta.xml
<CustomField>
    <fullName>Forward_Contract_Execute_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Execute/Spot Contract Approved</label>
    <type>Checkbox</type>
</CustomField>