force-app/main/default/objects/FOB_Additional_Contract__c/fields/Forward_FOB_Contract__c.field-meta.xml
<CustomField>
    <fullName>Forward_FOB_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forward FOB Contract</label>
    <referenceTo>Forward_FOB_Contract__c</referenceTo>
    <relationshipLabel>FOB Additional Contracts</relationshipLabel>
    <relationshipName>FOB_Additional_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>