force-app/main/default/objects/FOB_Additional_Contract__c/fields/Remarks_Spot_Rate__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Spot_Rate__c</fullName>
    <label>Remarks (Spot Rate)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>