force-app/main/default/objects/FOB_Additional_Contract__c/fields/Spot_Rate_Contract_Approved__c.field-meta.xml
<CustomField>
    <fullName>Spot_Rate_Contract_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spot Rate Contract Approved</label>
    <type>Checkbox</type>
</CustomField>