force-app/main/default/objects/FOB_Additional_Contract__c/fields/Spot_Rate_Sell_Execute__c.field-meta.xml
<CustomField>
    <fullName>Spot_Rate_Sell_Execute__c</fullName>
    <label>Spot Rate (Sell/Execute)</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>