force-app/main/default/objects/FOB_Additional_Contract__c/fields/Total_Cover_Amount_Contract_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Cover_Amount_Contract_Rate__c</fullName>
    <inlineHelpText>Total Cover Amount Contract Rate in S$ of each vehicle</inlineHelpText>
    <label>Total Cover Amount in S$ (Contract Rate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>