force-app/main/default/objects/FOB_Additional_Contract__c/fields/Total_Execution_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Execution_Amount__c</fullName>
    <inlineHelpText>Total Execution Amount of each vehicle</inlineHelpText>
    <label>Total Execution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>