force-app/main/default/objects/FOB_Additional_Contract__c/fields/Total_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>Total_Gain_Loss__c</fullName>
    <formula>IF( ISPICKVAL( Status__c , &apos;Forward Contract Execute&apos;) , null, (Total_Cover_Amount_Spot_Rate__c -  Total_Cover_Amount_Contract_Rate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Cover Amount Spot Rate - Total Cover Amount Contract Rate</inlineHelpText>
    <label>Total Gain/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>