force-app/main/default/objects/FOB_Additional_Contract__c/fields/Total_Spot_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Spot_Contract_Amount__c</fullName>
    <inlineHelpText>Total Spot Contract Amount of each vehicle</inlineHelpText>
    <label>Total Spot Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>