force-app/main/default/objects/FOB_Additional_Contract__c/fields/Total_Spot_Contract_Amount_SGD__c.field-meta.xml
<CustomField>
    <fullName>Total_Spot_Contract_Amount_SGD__c</fullName>
    <description>Total Spot Contract Amount in S$</description>
    <formula>Total_Spot_Contract_Amount__c * Spot_Rate__c</formula>
    <inlineHelpText>Spot Contract Amount * Spot Rate</inlineHelpText>
    <label>Total Spot Contract Amount in S$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>