force-app/main/default/objects/FOB_Additional_Contract__c/fields/Transaction_Date_Spot_Rate__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date_Spot_Rate__c</fullName>
    <label>Transaction Date (Spot Rate)</label>
    <type>Date</type>
</CustomField>