force-app/main/default/objects/FOB_Additional_Contract__c/fields/Warranty_Claim_Other_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Claim_Other_Payment_Amount__c</fullName>
    <label>Warranty Claim &amp; Other Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>