force-app/main/default/objects/FOB_Additional_Contract__c/validationRules/Can_not_edit_after_Sell_Spot_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_edit_after_Sell_Spot_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Spot_Rate_Contract_Approved__c ,  $Profile.Name &lt;&gt; &apos;System Administrator&apos;)
&amp;&amp; NOT( $Setup.Bypass_Automation_Settings__c.Bypass_Validation_Rules__c )</errorConditionFormula>
    <errorMessage>You are not allowed to edit after Execute/Spot Rate Forward Contract approved</errorMessage>
</ValidationRule>